# midi-controller

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig.defaults
docs/bom/: bom.md
docs/design/: overview.md  phase1_arch.md  phase1_sw_design.md  phase1_usb_midi.md  phase2_script.md  phase3_full.md  phase4_mux.md  phase5_final.md
docs/schematic/: pin_assignment.md
main/: CMakeLists.txt  idf_component.yml
main/include/: adc1_unit.h  adc2_unit.h  adc_unit.h  analog_input.h  button.h  config.h  controller.h  display.h  iadc_unit.h  led.h  midi_event.h  midi_sender.h  mux_channel.h  mux_controller.h  potentiometer.h  ssd1306.h  usb_descriptors.h  usb_midi.h
main/src/: adc1_unit.cpp  adc2_unit.cpp  adc_unit.cpp  analog_input.cpp  button.cpp  controller.cpp  display.cpp  led.cpp  main.cpp  mux_channel.cpp  mux_controller.cpp  potentiometer.cpp  ssd1306.cpp  usb_midi.cpp
remote-script/kenjung_MIDI/: __init__.py  kenjung_MIDI.py
tests/unit/: CMakeLists.txt  test_controller.cpp
tests/unit/stubs/: esp_log.h
tests/unit/stubs/driver/: gpio.h
tests/unit/stubs/esp_adc/: adc_cali.h  adc_oneshot.h
tests/unit/stubs/freertos/: FreeRTOS.h  queue.h  task.h
